# NSI_1ere_Buffon_2020_2021

./: .gitignore  10_exos_structures_1.py  10_exos_structures_2.py  12_sudoku.py  12_td_sudoku1.py  12_td_sudoku2.py  12_td_sudoku3.py  12_td_sudoku4.py  12_td_sudoku4_sujet.py  12_td_sudoku_complet.py  14_td_fonctions.py  17_cours_chaines.py  17_td_chaines.py  22_encodage.py  24_graphics.py  24_pygame_ex1.py  24_pygame_ex2_1.py  24_pygame_ex2_2.py  24_pygame_ex2_3.py  24_pygame_ex2_4.py  26_listes_complements.py  28_complements_chaines.py  29_specification.py  31_donnees_tables.py  31_donnees_tables2.py  39_dictionnaires.py  39_dictionnaires2.py  42_maths.py  4_td_turtle.py  4_turtle_correction.py  6_td_diviseurs.py  7_cours_conditions.py  8_cours_for.py  9_cours_while.py  EXIF_image_mystere.csv  directors.tsv  encodage_utf8.txt  indicateurs.csv  noms_voies_paris.csv  pyproject.toml  (+3 more)
